--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/",
     "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
     "vite": "https://aistudiocdn.com/vite@^7.2.2",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0"
   }
 }
 </script>
